# MUTO_RL

./: .gitignore  DEMO_REPORT.md  Makefile  README.md  REFACTORING_DONE.md  demo_run_tests.sh  ok  setup_jetson_nano.sh  setup_raspberrypi5.sh  verify_system.sh  yahboom_oled.py
MUTO_RL/: README.md
MUTO_RL/scripts/: list_envs.py  random_agent.py  zero_agent.py
MUTO_RL/scripts/skrl/: play.py  train.py
MUTO_RL/source/MUTO_RL/: setup.py
MUTO_RL/source/MUTO_RL/MUTO_RL/: ui_extension_example.py
MUTO_RL/source/MUTO_RL/MUTO_RL/tasks/manager_based/muto_rl/: __init__.py  muto_rl_env_cfg.py  muto_rs_robot_cfg.py
MUTO_RL/source/MUTO_RL/MUTO_RL/tasks/manager_based/muto_rl/agents/: skrl_ppo_cfg.yaml
MUTO_RL/source/MUTO_RL/config/: extension.toml
assets/: muto_usd.usd
assets/yahboomcar_description/urdf/: MUTO_fixed.urdf
assets/yahboomcar_description/urdf/MUTO_fixed/: MUTO_fixed.usd
assets/yahboomcar_description/urdf/MUTO_fixed/configuration/: MUTO_fixed_physics.usd  MUTO_fixed_robot.usd  MUTO_fixed_sensor.usd
config/: .env.exemple
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/config/: .env.base  .env.default  .env.edwin  .env.jetson_nano  .env.raspberrypi  env.user.examplel
docs/: ISAACLAB.md  NOTE.md  NOTE2.md  NOTE3.md  muto_rs_architecture_finale.md  muto_rs_architecture_finale2.md  pi_diagnostic_report_2026-04-07.md  pi_servo_feedback_reactivation_plan_2026-04-07.md
muto_install/include/muto_link/: c_api.h  driver.hpp  errors.hpp  export.hpp  muto_link  protocol.hpp  sensor.hpp  transport.hpp
muto_install/lib/: libmuto_link_cpp_lib.so.1  libmuto_link_cpp_lib.so.1.0.0
muto_install/lib/cmake/muto_link_cpp/: muto_link_cppConfig.cmake  muto_link_cppTargets-release.cmake  muto_link_cppTargets.cmake
scripts/: dependances.sh
tekbot_ws/: DOCKER_ARCHITECTURE.md  README.md  setup_jetson.sh  setup_pi.sh  workspace_setup.sh
tekbot_ws/src/muto_bringup/: README.md  package.xml  setup.cfg  setup.py
tekbot_ws/src/muto_bringup/config/: qos_config.yaml  system_params.yaml
tekbot_ws/src/muto_bringup/config/urdf/: materials.xacro  muto_rs.urdf.xacro
tekbot_ws/src/muto_bringup/data/: model_card_v003.json  observation_spec_v3.json  validate_sim_real.py
tekbot_ws/src/muto_bringup/launch/: all_robots.launch.py  debug.launch.py  jetson_full.launch.py  pi_full.launch.py
tekbot_ws/src/muto_bringup/muto_bringup/: __init__.py
tekbot_ws/src/muto_bringup/test/: README.md  checklist_terrain.md  test_copyright.py  test_flake8.py  test_pep257.py
tekbot_ws/src/muto_bringup/test/phase1_hardware_pi/: README.md  test_mode_transitions.py  test_usb_bridge_topics.py  test_watchdog_timeouts.py
tekbot_ws/src/muto_bringup/test/phase2_control_jetson/: README.md  test_obs_builder_vector.py  test_safety_filter.py
tekbot_ws/src/muto_bringup/test/phase3_perception/: README.md  test_perception_no_rl.py
tekbot_ws/src/muto_bringup/test/phase4_ai/: README.md  test_dry_run_commands.py  test_rl_pipeline_hz.py
tekbot_ws/src/muto_control/: CMakeLists.txt  README.md  package.xml
tekbot_ws/src/muto_control/data/: norm_stats_v3.json
tekbot_ws/src/muto_control/include/muto_control/: obs_builder_node.hpp  posture_validator.hpp  ring_buffer.hpp  safety_filter_node.hpp
tekbot_ws/src/muto_control/launch/: jetson_control.launch.py
tekbot_ws/src/muto_control/launch/params/: norm_stats_v3.yaml  obs_builder_params.yaml  safety_filter_params.yaml
tekbot_ws/src/muto_control/src/: obs_builder_node.cpp  posture_validator.cpp  safety_filter_node.cpp
tekbot_ws/src/muto_hardware/: CMakeLists.txt  README.md  package.xml
tekbot_ws/src/muto_hardware/config/: servo_limits.yaml
tekbot_ws/src/muto_hardware/include/muto_hardware/: complementary_filter.hpp  dynamixel_protocol.hpp  mode_manager_node.hpp  usb_bridge_node.hpp  watchdog_node.hpp
tekbot_ws/src/muto_hardware/launch/: pi_bringup.launch.py
tekbot_ws/src/muto_hardware/launch/params/: mode_manager_params.yaml  usb_bridge_params.yaml  watchdog_params.yaml
tekbot_ws/src/muto_hardware/src/: mode_manager_node.cpp  usb_bridge_node.cpp  watchdog_node.cpp
tekbot_ws/src/muto_inference/: README.md  package.xml  setup.cfg  setup.py
tekbot_ws/src/muto_inference/config/: rl_policy_params.yaml
tekbot_ws/src/muto_inference/launch/: rl_policy.launch.py
tekbot_ws/src/muto_inference/models/: model_card_v003.json  norm_stats_v3.json
tekbot_ws/src/muto_inference/muto_inference/: __init__.py  rl_policy_node.py  safe_pose.py  tensorrt_engine.py
tekbot_ws/src/muto_inference/test/: test_copyright.py  test_flake8.py  test_pep257.py
tekbot_ws/src/muto_msgs/: CMakeLists.txt  README.md  package.xml
tekbot_ws/src/muto_msgs/msg/: Commands.msg  HeightMap.msg  Observation.msg  Obstacle.msg  ObstacleList.msg  StampedImu.msg  StampedJointState.msg  SystemHealth.msg
tekbot_ws/src/muto_msgs/srv/: ModeRequest.srv
tekbot_ws/src/muto_navigation/: README.md  package.xml  setup.cfg  setup.py
tekbot_ws/src/muto_navigation/config/: nav_params.yaml
tekbot_ws/src/muto_navigation/launch/: navigation.launch.py
tekbot_ws/src/muto_navigation/muto_navigation/: __init__.py  navigation_node.py  obstacle_fusion.py
tekbot_ws/src/muto_navigation/test/: test_copyright.py  test_flake8.py  test_pep257.py
tekbot_ws/src/muto_perception/: CMakeLists.txt  README.md  package.xml
tekbot_ws/src/muto_perception/config/: thermal_thresholds.yaml
tekbot_ws/src/muto_perception/include/muto_perception/: depth_processor_node.hpp  lidar_processor_node.hpp  pcl_utils.hpp  thermal_monitor.hpp
tekbot_ws/src/muto_perception/launch/: depth_processor.launch.py  lidar_processor.launch.py
tekbot_ws/src/muto_perception/launch/params/: depth_params.yaml  lidar_params.yaml
tekbot_ws/src/muto_perception/src/: depth_processor_node.cpp  lidar_processor_node.cpp
tekbot_ws/src/muto_utils/: CMakeLists.txt  README.md  package.xml
tekbot_ws/src/muto_utils/include/muto_utils/: diagnostic_helpers.hpp  logger_config.hpp  timing_stats.hpp
tekbot_ws/src/muto_utils/src/: diagnostics_node.cpp
tekbot_ws/tools/: check_urdf_meshes.py
(+5 files in other folders)
